--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=http://localhost:4000/api/v1/
+VITE_API_URL="http://localhost:4000/api/v1/"
+VITE_LM_API_URL="http://127.0.0.1:1234/v1/chat/completions"
